# fictional-cartography

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_all_tests.sh
config/: _template.yaml  dominus-columbia.yaml  jersea-wastes.yaml  sussex-county-bw.yaml  sussex-county.yaml
docs/: backlog.md  config-reference.md  data-acquisition.md  rendering-cookbook.md  web-editor.md
src/: cache.py  cli.py  pipeline.py  server.py
src/data/: boundaries.py  overpass.py  urban_density.py
src/furniture/: cartouche.py  compass.py  legend.py  ornaments.py  scale_bar.py
src/labels/: markers.py  placer.py
src/styling/: barriers.py  boundaries.py  contamination.py  roads.py  texture.py  tints.py
src/terrain/: hillshade.py  modifications.py  srtm.py
tests/: conftest.py  test_barriers.py  test_cache.py  test_compound_constraints.py  test_contamination.py  test_modifications.py  test_render_queue.py
tests/playwright/: _capture_screenshots.py  _screenshot_deviation.py  helpers.py  test_decoration_extended.py  test_global_settings.py  test_offset_deviation.py  test_paint.py  test_place.py  test_render_export.py  test_routes_decoration_render.py  test_setup.py
web/: _shared.js  decoration.html  narrative.html  paint.html  place.html  render.html  routes.html  setup.html
